<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.dashboard.DashboardFragment">

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/zin_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_editText" />

    <EditText
        android:id="@+id/second_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_second"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/first_editText"
        app:layout_constraintStart_toStartOf="@+id/first_editText"
        app:layout_constraintTop_toBottomOf="@+id/first_editText" />

    <EditText
        android:id="@+id/first_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_first"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_label_text" />

    <TextView
        android:id="@+id/enter_label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="@dimen/label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notes_label_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notes_label"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="@dimen/label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_btn" />

    <TextView
        android:id="@+id/notes_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/notes"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="@+id/notes_label_text"
        app:layout_constraintStart_toStartOf="@+id/notes_label_text"
        app:layout_constraintTop_toBottomOf="@+id/notes_label_text" />
</androidx.constraintlayout.widget.ConstraintLayout>